--- a/Style-Acceuil.css
+++ b/Style-Acceuil.css
@@ -38,3 +38,82 @@ p{
 main{
 
 }
+
+.div-un-titre{background-color: rgb(61, 61, 61);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 500px;
+    height: 150px;
+    margin: auto;
+    color: honeydew;}
+    
+    
+    
+    
+    .content-slider{
+    
+        width: 80vw;
+        height: 80vh;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 30px;
+        color: black;
+    
+    }
+    
+    
+    .slide {
+    
+        width: 800px;
+        height: auto;
+    
+        background-color: #a6a7ad;
+    
+        display: none;
+        opacity : 0;
+    
+        transition: 0.5s;
+    }
+    
+    #two {
+        background-color:#a6a7ad;
+    }
+    
+    #three {
+    background-color:#a6a7ad;
+    }
+    
+    #four {background-color: #a6a7ad;
+    }
+    
+    #five {background-color:#a6a7ad;
+    }
+    
+    .active {
+        display: block;
+        opacity: 1;
+    }
+    
+    
+    .content-btn{
+        display: flex;
+        justify-content: space-around;
+        font-size: 25px;
+    }
+    
+    .iconify{
+    
+        background-color: lightblue;
+        border-radius: 100%;
+        color: white;
+        padding: 10px;
+    }
+    
+    .img-un{width: 600px;}
+    
+    .img-deux{width: 600px;}
+    /* fin header footer */
