--- a/Style-Nos-Produit.css
+++ b/Style-Nos-Produit.css
@@ -19,11 +19,6 @@ header{
     background-size: cover;
     height: 150px;
     background-repeat: no-repeat;
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-=======
->>>>>>> aab58baf06f75787a7af8a8211e79882993be0db
 }
 /*-------------main----------*/
 .toolbar{
@@ -44,15 +39,14 @@ header{
     height: 30px;
 }
 .menu{
-<<<<<<< HEAD
     width: 150px;
     height: 30px;
 }
 /*---------menu toolbar----------*/
 .dropbtn {
     margin-top: -10px;
-    border-radius: 20px;
     background-color: #4CAF50;
+    border-radius: 20px;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -80,7 +74,7 @@ header{
     display: block;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content  {background-color: #f1f1f1}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -88,12 +82,8 @@ header{
 
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
-=======
-    border-style: solid;
-    background-color: rgb(107, 41, 41);
-    border-radius: 20px;
+    background-color: #3e8e41;
+
     width: 150px;
     height: 30px;
->>>>>>> b99423ee8bd03ca480b36f22c6ebdb4d3e4c2d5b
->>>>>>> aab58baf06f75787a7af8a8211e79882993be0db
 }
