--- a/Style-HP.css
+++ b/Style-HP.css
@@ -35,10 +35,6 @@ p{
     color: white;
     text-align: center;
 }
-main{
-
-}
-
 .para1{
     display: flex;
     margin-top: 50px;
@@ -91,3 +87,5 @@ main{
     }
 
 }
+
+/*------------toolbar---------*/
