--- a/Style-Nos-Produit.css
+++ b/Style-Nos-Produit.css
@@ -31,14 +31,6 @@ header{
     width: 100%;
     height: 50px;
 }
-.recherche{
-    border-style: solid;
-    background-color: white;
-    border-radius: 20px;
-    width: 150px;
-    height: 30px;
-    border-style: solid;
-}
 .menu{
     width: 150px;
     height: 30px;
@@ -115,4 +107,7 @@ header{
     justify-content: space-around;
     align-items: center;
     
+}
+.btn-recherche{
+    margin-right: 20px;
 }
