--- a/Style-Acceuil.css
+++ b/Style-Acceuil.css
@@ -10,6 +10,14 @@ a{
     text-decoration: none;
     color: white;
 }
+.lien1{
+  color: yellow;
+}
+.p1{
+  margin-top: 10px;
+  text-align: center;
+  color: gray;
+}
 /*----------header---------*/
 header{
     display: flex;
