--- a/style-recherche-produit.css
+++ b/style-recherche-produit.css
@@ -29,14 +29,11 @@ header{
 }
 .div1{
     display: flex;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
     background-color: #c4c4c4;
     border-radius: 20px;
     border: solid;
     width: 50%;
-}
-.button{
-    display: flex;
-    background-color: black;
-    width: 150px;
-    height: 50px;
 }
