--- a/Style-HP.css
+++ b/Style-HP.css
@@ -21,6 +21,10 @@ header{
     height: 150px;
     background-repeat: no-repeat;
 }
+body {
+    font-family: 'Fuzzy Bubbles', cursive;
+    background: #f2f2f2;
+  }
 
 .para{
     display: flex;
