--- a/Style-Asus.css
+++ b/Style-Asus.css
@@ -20,7 +20,10 @@ header{
     height: 150px;
     background-repeat: no-repeat;
 }
-
+body {
+    font-family: 'Fuzzy Bubbles', cursive;
+    background: #f2f2f2;
+  }
 .para{
     display: flex;
     margin-left: 30%;
