--- a/Style-Nous-Contacté.css
+++ b/Style-Nous-Contacté.css
@@ -24,6 +24,10 @@ header{
     height: 150px;
     background-repeat: no-repeat;
 }
+body {
+    font-family: 'Fuzzy Bubbles', cursive;
+    background: #f2f2f2;
+  }
 /*------main---------*/
 main{
     display: flex;
