--- a/Style-Razer.css
+++ b/Style-Razer.css
@@ -20,7 +20,10 @@ header{
     height: 150px;
     background-repeat: no-repeat;
 }
-
+body {
+    font-family: 'Fuzzy Bubbles', cursive;
+    background: #f2f2f2;
+}
 .para{
     display: flex;
     margin-left: 30%;
@@ -34,9 +37,6 @@ header{
 p{
     color: white;
     text-align: center;
-}
-main{
-
 }
 
 .para1{
